--- a/src/main/java/com/ticketbooking/ticketBooking/Configuration.json
+++ b/src/main/java/com/ticketbooking/ticketBooking/Configuration.json
@@ -1,1 +1,1 @@
-{"totalTickets":100,"ticketReleaseRate":4,"customerRetreivalRate":5,"maxTicketCapacity":1000}
+{"totalTicketsByVendor":4,"totalTicketsByConsumer":3,"ticketReleaseRate":1,"customerRetreivalRate":3,"maxTicketCapacity":10}
