--- a/src/main/java/com/ticketbooking/ticketBooking/Configuration.json
+++ b/src/main/java/com/ticketbooking/ticketBooking/Configuration.json
@@ -1,1 +1,1 @@
-{"totalTicketsByVendor":10,"totalTicketsByConsumer":8,"ticketReleaseRate":2,"customerRetreivalRate":2,"maxTicketCapacity":100}
+{"totalTicketsByVendor":9,"totalTicketsByConsumer":8,"ticketReleaseRate":2,"customerRetreivalRate":2,"noOfVendors":10,"noOfConsumers":9,"maxTicketCapacity":100}
