--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
-
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.222</version>
+		</dependency>
 
 	</dependencies>
 
